--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,6 +3,7 @@ version: '3'
 volumes:
   pg_data_production:
   static_volume:
+  media_volume:
 
 services:
   db:
@@ -16,18 +17,20 @@ services:
     env_file: .env
     volumes:
       - static_volume:/backend_static
+      - media_volume:/var/www/kittygram/media
 
   frontend:
     image: dartilius/kittygram_frontend
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static_volume:/kittygram_static
+      - static_volume:/frontend_static
 
   gateway:
     image: dartilius/kittygram_gateway
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
+      - media_volume:/var/www/kittygram/media
     ports:
       - 9000:80
