--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 volumes:
   pg_data:
   static:
+  media:
 
 services:
   db:
@@ -16,6 +17,7 @@ services:
     env_file: .env
     volumes:
       - static:/backend_static
+      - media:/var/www/kittygram/media
     depends_on:
       - db
 
@@ -30,5 +32,6 @@ services:
     build: ./nginx/
     volumes:
       - static:/staticfiles/
+      - media:/var/www/kittygram/media/
     ports:
       - 9000:80
