--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,4 +15,8 @@ server {
     alias /staticfiles/;
     try_files $uri $uri/ /index.html;
   }
+
+  location /media/ {
+    root /var/www/kittygram/;
+  }
 }
